vaultwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
