vaultwarden/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.mandariini.uk`)
      kind: Rule
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
  tls:
    secretName: mandariini-uk-tls
